feat: implement tabs in product and solutions mega menus

--- a/index.html
+++ b/index.html
@@ -84,75 +84,86 @@
                         <div class="mega-menu-container">
                             <aside class="mega-menu-sidebar">
                                 <div class="sidebar-category">Intelligence Layer</div>
-                                <div class="sidebar-item active">
+                                <div class="sidebar-item active" data-content="nav-product-overview">
                                     <span>Product Overview</span>
                                     <i class="item-desc">Precision authority mapping</i>
                                 </div>
+                                <div class="sidebar-item" data-content="nav-product-insights">
+                                    <span>Insights</span>
+                                    <i class="item-desc">Market & cultural signals</i>
+                                </div>
                             </aside>
                             <div class="mega-menu-grid-content">
-                                <div class="grid-header">
-                                    <h4>NYRA Authority Intelligence</h4>
+                                <!-- Section: Product Overview -->
+                                <div class="grid-content-section active" id="nav-product-overview">
+                                    <div class="grid-header">
+                                        <h4>NYRA Authority Intelligence</h4>
+                                    </div>
+                                    <div class="grid-items col-2">
+                                         <div class="grid-item">
+                                            <div class="grid-item-icon">🕸️</div>
+                                            <div class="grid-item-text">
+                                                <h5>Authority Graph™</h5>
+                                                <p>Map real authority relationships between creators & brands.</p>
+                                            </div>
+                                        </div>
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">📈</div>
+                                            <div class="grid-item-text">
+                                                <h5>Impact Prediction</h5>
+                                                <p>Forecast campaign impact before launch.</p>
+                                            </div>
+                                        </div>
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">💰</div>
+                                            <div class="grid-item-text">
+                                                <h5>Pricing Intelligence</h5>
+                                                <p>Calculate true market value of creators.</p>
+                                            </div>
+                                        </div>
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🎯</div>
+                                            <div class="grid-item-text">
+                                                <h5>KPI Optimization</h5>
+                                                <p>Optimize campaign-specific KPI frameworks.</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="grid-items col-2">
-                                     <div class="grid-item">
-                                        <div class="grid-item-icon">🕸️</div>
-                                        <div class="grid-item-text">
-                                            <h5>Authority Graph™</h5>
-                                            <p>Map real authority relationships between creators & brands.</p>
-                                        </div>
+
+                                <!-- Section: Insights -->
+                                <div class="grid-content-section" id="nav-product-insights">
+                                    <div class="grid-header">
+                                        <h4>Insights</h4>
                                     </div>
-                                    <div class="grid-item">
-                                        <div class="grid-item-icon">📈</div>
-                                        <div class="grid-item-text">
-                                            <h5>Impact Prediction</h5>
-                                            <p>Forecast campaign impact before launch.</p>
+                                    <div class="grid-items col-2">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">📊</div>
+                                            <div class="grid-item-text">
+                                                <h5>Market & Category</h5>
+                                                <p>Reveal where authority sits across industries.</p>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="grid-item">
-                                        <div class="grid-item-icon">💰</div>
-                                        <div class="grid-item-text">
-                                            <h5>Pricing Intelligence</h5>
-                                            <p>Calculate true market value of creators.</p>
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">👥</div>
+                                            <div class="grid-item-text">
+                                                <h5>Creator & Audience</h5>
+                                                <p>Analyze community strength & engagement quality.</p>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="grid-item">
-                                        <div class="grid-item-icon">🎯</div>
-                                        <div class="grid-item-text">
-                                            <h5>KPI Optimization</h5>
-                                            <p>Optimize campaign-specific KPI frameworks.</p>
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🛡️</div>
+                                            <div class="grid-item-text">
+                                                <h5>Brand Authority Tracking</h5>
+                                                <p>Monitor how brand authority evolves over time.</p>
+                                            </div>
                                         </div>
-                                    </div>
-                                </div>
-                                <div class="grid-header" style="margin-top: 24px;">
-                                    <h4>Insights</h4>
-                                </div>
-                                <div class="grid-items col-2">
-                                    <div class="grid-item">
-                                        <div class="grid-item-icon">📊</div>
-                                        <div class="grid-item-text">
-                                            <h5>Market & Category</h5>
-                                            <p>Reveal where authority sits across industries.</p>
-                                        </div>
-                                    </div>
-                                    <div class="grid-item">
-                                        <div class="grid-item-icon">👥</div>
-                                        <div class="grid-item-text">
-                                            <h5>Creator & Audience</h5>
-                                            <p>Analyze community strength & engagement quality.</p>
-                                        </div>
-                                    </div>
-                                    <div class="grid-item">
-                                        <div class="grid-item-icon">🛡️</div>
-                                        <div class="grid-item-text">
-                                            <h5>Brand Authority Tracking</h5>
-                                            <p>Monitor how brand authority evolves over time.</p>
-                                        </div>
-                                    </div>
-                                    <div class="grid-item">
-                                        <div class="grid-item-icon">📡</div>
-                                        <div class="grid-item-text">
-                                            <h5>Cultural & Trend Signals</h5>
-                                            <p>Detect emerging narratives & cultural shifts.</p>
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">📡</div>
+                                            <div class="grid-item-text">
+                                                <h5>Cultural & Trend Signals</h5>
+                                                <p>Detect emerging narratives & cultural shifts.</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -172,46 +183,70 @@
                         <div class="mega-menu-container solutions-layout">
                             <aside class="mega-menu-sidebar">
                                 <div class="sidebar-category">Persona Driven</div>
-                                <div class="sidebar-item active">
+                                <div class="sidebar-item active" data-content="nav-solutions-team">
                                     <span>Team Solutions</span>
                                     <i class="item-desc">Optimized for your workflow</i>
                                 </div>
-                                <div class="sidebar-item">
+                                <div class="sidebar-item" data-content="nav-solutions-stories">
                                     <span>Success stories</span>
                                     <i class="item-desc">Results by industry</i>
                                 </div>
                             </aside>
                             <div class="mega-menu-grid-content">
-                                <div class="grid-header">
-                                    <h4>For Your Team</h4>
+                                <div class="grid-content-section active" id="nav-solutions-team">
+                                    <div class="grid-header">
+                                        <h4>For Your Team</h4>
+                                    </div>
+                                    <div class="grid-items">
+                                         <div class="grid-item">
+                                            <div class="grid-item-icon">🚀</div>
+                                            <div class="grid-item-text">
+                                                <h5>For Startups</h5>
+                                                <p>Move fast, prove real impact, and find your early authority nodes.</p>
+                                            </div>
+                                        </div>
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🏢</div>
+                                            <div class="grid-item-text">
+                                                <h5>For Enterprises</h5>
+                                                <p>Standardize, scale, and de-risk global influencer activations.</p>
+                                            </div>
+                                        </div>
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🤝</div>
+                                            <div class="grid-item-text">
+                                                <h5>For Agencies</h5>
+                                                <p>Elevate your strategy and justify client value with hard data.</p>
+                                            </div>
+                                        </div>
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">💎</div>
+                                            <div class="grid-item-text">
+                                                <h5>Case Studies</h5>
+                                                <p>Explore real-world examples of Authority Intelligence in action.</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="grid-items">
-                                     <div class="grid-item">
-                                        <div class="grid-item-icon">🚀</div>
-                                        <div class="grid-item-text">
-                                            <h5>For Startups</h5>
-                                            <p>Move fast, prove real impact, and find your early authority nodes.</p>
-                                        </div>
+                                
+                                <div class="grid-content-section" id="nav-solutions-stories">
+                                    <div class="grid-header">
+                                        <h4>Success Stories</h4>
                                     </div>
-                                    <div class="grid-item">
-                                        <div class="grid-item-icon">🏢</div>
-                                        <div class="grid-item-text">
-                                            <h5>For Enterprises</h5>
-                                            <p>Standardize, scale, and de-risk global influencer activations.</p>
+                                    <div class="grid-items">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">📈</div>
+                                            <div class="grid-item-text">
+                                                <h5>B2B SaaS Growth</h5>
+                                                <p>3x pipeline efficiency using Authority Mapping.</p>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="grid-item">
-                                        <div class="grid-item-icon">🤝</div>
-                                        <div class="grid-item-text">
-                                            <h5>For Agencies</h5>
-                                            <p>Elevate your strategy and justify client value with hard data.</p>
-                                        </div>
-                                    </div>
-                                    <div class="grid-item">
-                                        <div class="grid-item-icon">💎</div>
-                                        <div class="grid-item-text">
-                                            <h5>Case Studies</h5>
-                                            <p>Explore real-world examples of Authority Intelligence in action.</p>
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🎯</div>
+                                            <div class="grid-item-text">
+                                                <h5>Fintech Launch</h5>
+                                                <p>Dominating niche authorities for a series A launch.</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
