--- a/agency-collab.html
+++ b/agency-collab.html
@@ -328,6 +328,7 @@
                                 <div class="grid-content-section active" id="nav-product-overview">
                                     <div class="grid-header">
                                         <h4>NYRA Authority Intelligence</h4>
+                                        <p>Scientific mapping of network relationships and influence velocity.</p>
                                     </div>
                                     <div class="grid-items col-2">
                                          <div class="grid-item">
@@ -365,6 +366,7 @@
                                 <div class="grid-content-section" id="nav-product-insights">
                                     <div class="grid-header">
                                         <h4>Insights</h4>
+                                        <p>Data-driven perspectives on market trends and community dynamics.</p>
                                     </div>
                                     <div class="grid-items col-2">
                                         <div class="grid-item">
@@ -426,6 +428,7 @@
                                 <div class="grid-content-section active" id="nav-solutions-team">
                                     <div class="grid-header">
                                         <h4>For Your Team</h4>
+                                        <p>Tailored workflows to scale your authority marketing operations.</p>
                                     </div>
                                     <div class="grid-items">
                                          <div class="grid-item">
@@ -462,6 +465,7 @@
                                 <div class="grid-content-section" id="nav-solutions-stories">
                                     <div class="grid-header">
                                         <h4>Success Stories</h4>
+                                        <p>Real-world impact across diverse industries and growth stages.</p>
                                     </div>
                                     <div class="grid-items">
                                         <div class="grid-item">
@@ -506,6 +510,7 @@
                              <div class="mega-menu-grid-content" style="width: 100%;">
                                 <div class="grid-header">
                                     <h4>Company & Insights</h4>
+                                    <p>Our methodology, company updates, and support resources.</p>
                                 </div>
                                 <div class="grid-items col-2">
                                     <a href="/insights.html" class="grid-item-link">
