feat: restructure solutions mega menu with persona-based tabs

--- a/post.html
+++ b/post.html
@@ -439,71 +439,87 @@
                         <div class="mega-menu-container solutions-layout">
                             <aside class="mega-menu-sidebar">
                                 <div class="sidebar-category">Persona Driven</div>
-                                <div class="sidebar-item active" data-content="nav-solutions-team">
-                                    <span>Team Solutions</span>
-                                    <i class="item-desc">Optimized for your workflow</i>
+                                <div class="sidebar-item active" data-content="nav-solutions-startups">
+                                    <span>For Startups</span>
+                                    <i class="item-desc">Move fast, prove impact</i>
                                 </div>
-                                <div class="sidebar-item" data-content="nav-solutions-stories">
-                                    <span>Success stories</span>
-                                    <i class="item-desc">Results by industry</i>
+                                <div class="sidebar-item" data-content="nav-solutions-enterprises">
+                                    <span>For Enterprises</span>
+                                    <i class="item-desc">Scale & de-risk global</i>
+                                </div>
+                                <div class="sidebar-item" data-content="nav-solutions-agencies">
+                                    <span>For Agencies</span>
+                                    <i class="item-desc">Strategy & hard data</i>
                                 </div>
                             </aside>
                             <div class="mega-menu-grid-content">
-                                <div class="grid-content-section active" id="nav-solutions-team">
+                                <!-- Startups -->
+                                <div class="grid-content-section active" id="nav-solutions-startups">
                                     <div class="grid-header">
-                                        <h4>For Your Team</h4>
-                                        <p>Tailored workflows to scale your authority marketing operations.</p>
+                                        <h4>Authority for Startups</h4>
+                                        <p>Identify early adopter nodes and maximize your small-team impact.</p>
                                     </div>
                                     <div class="grid-items">
                                          <div class="grid-item">
                                             <div class="grid-item-icon">🚀</div>
                                             <div class="grid-item-text">
-                                                <h5>For Startups</h5>
-                                                <p>Move fast, prove real impact, and find your early authority nodes.</p>
+                                                <h5>Early Node Discovery</h5>
+                                                <p>Find the 1% of creators who actually move the needle in your niche.</p>
                                             </div>
                                         </div>
                                         <div class="grid-item">
-                                            <div class="grid-item-icon">🏢</div>
+                                            <div class="grid-item-icon">⚡</div>
                                             <div class="grid-item-text">
-                                                <h5>For Enterprises</h5>
-                                                <p>Standardize, scale, and de-risk global influencer activations.</p>
-                                            </div>
-                                        </div>
-                                        <div class="grid-item">
-                                            <div class="grid-item-icon">🤝</div>
-                                            <div class="grid-item-text">
-                                                <h5>For Agencies</h5>
-                                                <p>Elevate your strategy and justify client value with hard data.</p>
-                                            </div>
-                                        </div>
-                                        <div class="grid-item">
-                                            <div class="grid-item-icon">💎</div>
-                                            <div class="grid-item-text">
-                                                <h5>Case Studies</h5>
-                                                <p>Explore real-world examples of Authority Intelligence in action.</p>
+                                                <h5>Impact Velocity</h5>
+                                                <p>Prove the ROI of your influencer spend with scientific authority data.</p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 
-                                <div class="grid-content-section" id="nav-solutions-stories">
+                                <!-- Enterprises -->
+                                <div class="grid-content-section" id="nav-solutions-enterprises">
                                     <div class="grid-header">
-                                        <h4>Success Stories</h4>
-                                        <p>Real-world impact across diverse industries and growth stages.</p>
+                                        <h4>Enterprise Intelligence</h4>
+                                        <p>Standardize influence operations and mitigate global brand risk.</p>
                                     </div>
                                     <div class="grid-items">
                                         <div class="grid-item">
-                                            <div class="grid-item-icon">📈</div>
+                                            <div class="grid-item-icon">🏢</div>
                                             <div class="grid-item-text">
-                                                <h5>B2B SaaS Growth</h5>
-                                                <p>3x pipeline efficiency using Authority Mapping.</p>
+                                                <h5>Global Governance</h5>
+                                                <p>Centralize cross-border creator relationships and market value audits.</p>
                                             </div>
                                         </div>
                                         <div class="grid-item">
-                                            <div class="grid-item-icon">🎯</div>
+                                            <div class="grid-item-icon">🛡️</div>
                                             <div class="grid-item-text">
-                                                <h5>Fintech Launch</h5>
-                                                <p>Dominating niche authorities for a series A launch.</p>
+                                                <h5>Risk Mitigation</h5>
+                                                <p>De-risk high-spend activations with deep community verification.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Agencies -->
+                                <div class="grid-content-section" id="nav-solutions-agencies">
+                                    <div class="grid-header">
+                                        <h4>Agency Performance</h4>
+                                        <p>Elevate client strategies and justify higher retainer values with precision data.</p>
+                                    </div>
+                                    <div class="grid-items">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🤝</div>
+                                            <div class="grid-item-text">
+                                                <h5>Client Strategy Alpha</h5>
+                                                <p>Offer unique competitive insights your clients can't get elsewhere.</p>
+                                            </div>
+                                        </div>
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">📊</div>
+                                            <div class="grid-item-text">
+                                                <h5>Hard Data Justification</h5>
+                                                <p>Turn soft influencer 'vibes' into hard authority metrics clients trust.</p>
                                             </div>
                                         </div>
                                     </div>
