feat: rename Product menu items to Platform and Data Solutions

--- a/contact.html
+++ b/contact.html
@@ -215,11 +215,11 @@
                             <aside class="mega-menu-sidebar">
                                 <div class="sidebar-category">Intelligence Layer</div>
                                 <div class="sidebar-item active" data-content="nav-product-overview">
-                                    <span>Product Overview</span>
+                                    <span>Platform</span>
                                     <i class="item-desc">Precision authority mapping</i>
                                 </div>
                                 <div class="sidebar-item" data-content="nav-product-insights">
-                                    <span>Insights</span>
+                                    <span>Data Solutions</span>
                                     <i class="item-desc">Market & cultural signals</i>
                                 </div>
                             </aside>
