feat: update enterprise solutions content with spend and impact intelligence

--- a/terms.html
+++ b/terms.html
@@ -197,25 +197,32 @@
                                     </div>
                                 </div>
                                 
-                                <!-- Enterprises -->
+                                                                <!-- Enterprises -->
                                 <div class="grid-content-section" id="nav-solutions-enterprises">
                                     <div class="grid-header">
                                         <h4>Enterprise Intelligence</h4>
-                                        <p>Standardize influence operations and mitigate global brand risk.</p>
+                                        <p>Maximize ROI by standardizing high-spend influencer operations.</p>
                                     </div>
                                     <div class="grid-items">
                                         <div class="grid-item">
-                                            <div class="grid-item-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="16" height="20" x="4" y="2" rx="2" ry="2"/><path d="M9 22v-4h6v4"/><path d="M8 6h.01"/><path d="M16 6h.01"/><path d="M8 10h.01"/><path d="M16 10h.01"/><path d="M8 14h.01"/><path d="M16 14h.01"/></svg></div>
+                                            <div class="grid-item-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="1" x2="12" y2="23"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/></svg></div>
                                             <div class="grid-item-text">
-                                                <h5>Global Governance</h5>
-                                                <p>Centralize cross-border creator relationships and market value audits.</p>
+                                                <h5>Spend Intelligence</h5>
+                                                <p>Scientifically determine the true market value and optimal spend for every creator.</p>
                                             </div>
                                         </div>
                                         <div class="grid-item">
-                                            <div class="grid-item-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/><path d="m9 12 2 2 4-4"/></svg></div>
+                                            <div class="grid-item-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 3v18h18"/><path d="m19 9-5 5-4-4-3 3"/></svg></div>
                                             <div class="grid-item-text">
-                                                <h5>Risk Mitigation</h5>
-                                                <p>De-risk high-spend activations with deep community verification.</p>
+                                                <h5>Impact Forecasting</h5>
+                                                <p>Predict reach and community resonance outcomes before committing your budget.</p>
+                                            </div>
+                                        </div>
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="12" r="6"/><circle cx="12" cy="12" r="2"/></svg></div>
+                                            <div class="grid-item-text">
+                                                <h5>KPI Optimization</h5>
+                                                <p>Dynamically align your creator mix based on specific performance goals and budgets.</p>
                                             </div>
                                         </div>
                                     </div>
